# freshops

./: .gitignore  README.md  pyproject.toml
docs_src/source/: conf.py  index.rst
src/freshops/: __about__.py  __init__.py  client.py  config.py  constants.py  constants.toml  exceptions.py  exceptions_simplified.py
src/freshops/cli/: __init__.py  __main__.py  commands.py
src/freshops/models/: __init__.py  agent.py  base.py  department.py  group.py  location.py  role.py  workspace.py
tests/: __init__.py  test_agent_cache.py  test_client.py  test_config.py  test_department_cache.py  test_group_cache.py  test_location_cache.py  test_role_cache.py
